--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "clean": "rm dist/bundle.js",
     "start": "parcel src/index.html",
-    "build-prod": "parcel build src/index.html",
+    "build": "parcel build src/index.html",
     "test": "jest",
     "server": "nodemon server",
     "You can remove concurrently if you're not using a front-end JS framework": "",
