--- a/package.json
+++ b/package.json
@@ -15,11 +15,9 @@
   "scripts": {
     "clean": "rm dist/bundle.js",
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html",
+    "build": "parcel build src/index.html --public-url ./",
     "test": "jest",
-    "server": "nodemon server",
-    "You can remove concurrently if you're not using a front-end JS framework": "",
-    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start\""
+    "server": "parcel serve dist/index.html"
   },
   "dependencies": {
     "date-fns": "^2.29.2",
