--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "start": "parcel src/index.html",
-    "build": "npm run clean && parcel build src/index.html --public-url ./",
+    "build": "npm run clean && parcel build src/index.html --dist-dir dist --public-url ./",
     "test": "jest",
     "serve": "parcel serve dist/index.html"
   },
